.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:06:35 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
Finished building: ../src/Main.cpp
 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
Finished building: ../src/Particle.cpp
 
Building file: ../src/Screen.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Screen.d" -MT"src/Screen.o" -o "src/Screen.o" "../src/Screen.cpp"
Finished building: ../src/Screen.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:06:37 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
make: Nothing to be done for `all'.
15:09:07 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
Finished building: ../src/Particle.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:10:38 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
make: Nothing to be done for `all'.
15:11:06 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
Finished building: ../src/Particle.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:12:15 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
Finished building: ../src/Particle.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:12:25 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
Finished building: ../src/Particle.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:12:44 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
../src/Particle.cpp:25:55: error: expected ';' at end of declaration
        const double xSpeed = 0.001 * (2.0 * rand())/RAND_MAX) - 1;
                                                             ^
                                                             ;
1 error generated.
make: *** [src/Particle.o] Error 1
15:12:48 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
Finished building: ../src/Particle.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:13:04 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
Finished building: ../src/Particle.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
15:13:18 **** Incremental Build of configuration Debug for project SDL Basic ****
make all 
Building file: ../src/Particle.cpp
Invoking: GCC C++ Compiler
g++ -I/opt/local/include/SDL2 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Particle.d" -MT"src/Particle.o" -o "src/Particle.o" "../src/Particle.cpp"
Finished building: ../src/Particle.cpp
 
Building target: SDL Basic
Invoking: MacOS X C++ Linker
g++ -L/opt/local/lib -o "SDL Basic"  ./src/Main.o ./src/Particle.o ./src/Screen.o ./src/Swarm.o   -lSDL2
Finished building target: SDL Basic
 
